orquestration/hipstershop/manifests/adservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adservice
spec:
  selector:
    matchLabels:
      app: adservice
  template:
    metadata:
      labels:
        app: adservice
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: server
        image: gcr.io/google-samples/microservices-demo/adservice:v0.2.0
        ports:
        - containerPort: 9555
        readinessProbe:
          successThreshold: 3
          initialDelaySeconds: 20
          periodSeconds: 15
          timeoutSeconds: 60
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:9555", "-connect-timeout", "60000ms", "-rpc-timeout", "60000ms"]
        livenessProbe:
          initialDelaySeconds: 20
          periodSeconds: 15
          failureThreshold: 3
          timeoutSeconds: 60
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:9555", "-connect-timeout", "60000ms", "-rpc-timeout", "60000ms"]
---
apiVersion: v1
kind: Service
metadata:
  name: adservice
spec:
  type: ClusterIP
  selector:
    app: adservice
  ports:
  - name: grpc
    port: 9555
    targetPort: 9555
