orquestration/hipstershop/manifests/currencyservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: currencyservice
spec:
  selector:
    matchLabels:
      app: currencyservice
  template:
    metadata:
      labels:
        app: currencyservice
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: server
        image: gcr.io/google-samples/microservices-demo/currencyservice:v0.2.0
        ports:
        - name: grpc
          containerPort: 7000
        readinessProbe:
          timeoutSeconds: 60
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:7000"]
        livenessProbe:
          timeoutSeconds: 60
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:7000"]
        # resources:
        #   requests:
        #     cpu: 100m
        #     memory: 64Mi
        #   limits:
        #     cpu: 200m
        #     memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: currencyservice
spec:
  type: ClusterIP
  selector:
    app: currencyservice
  ports:
  - name: grpc
    port: 7000
    targetPort: 7000
