orquestration/hipstershop/manifests/recommendationservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recommendationservice
spec:
  selector:
    matchLabels:
      app: recommendationservice
  template:
    metadata:
      labels:
        app: recommendationservice
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: server
        image: gcr.io/google-samples/microservices-demo/recommendationservice:v0.2.0
        ports:
        - containerPort: 8080
        readinessProbe:
          periodSeconds: 5
          timeoutSeconds: 20
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:8080", "-connect-timeout", "5000ms", "-rpc-timeout", "5000ms"]
        livenessProbe:
          periodSeconds: 5
          timeoutSeconds: 20
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:8080", "-connect-timeout", "5000ms", "-rpc-timeout", "5000ms"]
---
apiVersion: v1
kind: Service
metadata:
  name: recommendationservice
spec:
  type: ClusterIP
  selector:
    app: recommendationservice
  ports:
  - name: grpc
    port: 8080
    targetPort: 8080
